--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,41 @@
 /** Root */
 
+:root {
+    --blue: #4F81BD;
+    --green: #01B050;
+}
+
 /** Generics */
 
+body{
+    font-family: 'Pangolin', cursive;
+    font-size: 22px;
+}
 
+h1{
+    color: var(--green);
+    font-size: 42px;
+    border-bottom: 6px solid var(--blue);
+}
 
-
+ul{
+    list-style: none;
+    padding-left: 0;
+}
 
 /** Utilities */
+
+/** Shopping list */
+
+#shopping-list {
+    max-width: 400px;
+    min-height: 200px;
+    margin: 100px auto;
+    border: 3px solid var(--blue);
+    text-align: center;
+    padding: 10px;
+}
+
+#shopping-list li{
+    border-bottom: 2px solid var(--green);
+}
